* UTIL type=device | introduce actions=cleanuprule-create-bp
* UTIL type=device actions=cleanuprule-create-bp extend with PAN-OS API method
* UTIL introduce PAN-OS version for each script output
* UTIL pan-os-php type=device | introduce PAN-OS API. mode for actions=zoneprotectionprofile-create-bp /  logforwardingprofile-create-bp

BUGFIX:
* update installer scripts / issues with git-php not available
* update dockerfiles to support git-php
* Dockerfiles - extend with git and set git global
* UTIL pa_address-edit actions=decommission | bugfix not possible to remove object from dynamic address-group
* UTIL | improve service any usage to 0-65535 from any / dynamic improvements from 1024-65535 to 1025-65535
* UTIL pan-os-php type=device | bugfix for actions=securityprofile-create-alert-only
* class Address/AddressGroup/Service/ServiceGroup/Tag | bugfix if e.g. merger script like to create objects in previous empty ObjectStore
* class customURLProfile | bugfix to create new customURLProfile for PAN-OS version >= 9.0

GENERAL:
* update Readme and Install file / bring in information for PAN-OS-PHP on Windows WSLv2 installation


2.0.26 (20211209)
UTILS:
* UTIL pan-os-php type=$utiltype is the only supported UTIL script for the future, all other UTIL script are set to deprecated
* UTIL pan-os-php UI - move to local file usage
* UTIL all script - introduce new argument "shadow-nojson"
* UTIL UI - improvement to get filter correctly working for operators like ">,<,=,!"
* UTIL UI - starting on extended version
* UTIL UI - extend to delete additional actions/filter column
* UTIL develop - add multiple script in specific for downloading PAN-OS software
* UTIL develop | introduce API creation testing script for different objects
* UTIL develop | introduce reset-config and software-remove script
* UTIL develop | software-downloader.php improve exception support