@@ -908,9 +908,6 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
 
         if( $context->isAPI && $context->subSystem->isPanorama() )
             derr( "API mode not implemented yet for Panorama" );
-        //but also not for PAN-OS
-        if( $context->isAPI )
-            derr( "API mode not implemented yet" );
 
         if( $context->subSystem->isPanorama() )
         {
@@ -1224,7 +1221,10 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
           <member>web-based-email</member>
           <member>web-hosting</member>
         </alert>
-        <mlav-engine-urlbased-enabled>
+      </entry>";
+
+/*
+       <mlav-engine-urlbased-enabled>
           <entry name=\"Phishing Detection\">
             <mlav-policy-action>alert</mlav-policy-action>
           </entry>
@@ -1232,7 +1232,7 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
             <mlav-policy-action>alert</mlav-policy-action>
           </entry>
         </mlav-engine-urlbased-enabled>
-      </entry>";
+*/
 
             $fb_xmlString = "<entry name=\"Alert-Only-FB\">
         <rules>
@@ -1277,9 +1277,12 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
                 $ownerDocument = $sub->xmlroot->ownerDocument;
 
 
-                $sharedStore->customURLProfileStore->newCustomSecurityProfileURL( "Block" );
-                $sharedStore->customURLProfileStore->newCustomSecurityProfileURL( "Allow" );
-                $sharedStore->customURLProfileStore->newCustomSecurityProfileURL( "Custom-No-Decrypt" );
+                $block = $sharedStore->customURLProfileStore->newCustomSecurityProfileURL( "Block" );
+                $block->API_sync();
+                $allow = $sharedStore->customURLProfileStore->newCustomSecurityProfileURL( "Allow" );
+                $allow->API_sync();
+                $nodecrypt = $sharedStore->customURLProfileStore->newCustomSecurityProfileURL( "Custom-No-Decrypt" );
+                $nodecrypt->API_sync();
 
 
                 $store = $sharedStore->AntiVirusProfileStore;
@@ -1291,6 +1294,7 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
                 $av->load_from_domxml($node);
                 $av->owner = null;
                 $store->addSecurityProfile($av);
+                $av->API_sync();
 
                 $store = $sharedStore->AntiSpywareProfileStore;
                 $as = new AntiSpywareProfile($name . "-AS", $store);
@@ -1301,6 +1305,7 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
                 $as->load_from_domxml($node);
                 $as->owner = null;
                 $store->addSecurityProfile($as);
+                $as->API_sync();
 
                 $store = $sharedStore->VulnerabilityProfileStore;
                 $vp = new VulnerabilityProfile($name . "-VP", $store);
@@ -1311,6 +1316,7 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
                 $vp->load_from_domxml($node);
                 $vp->owner = null;
                 $store->addSecurityProfile($vp);
+                $vp->API_sync();;
 
                 $store = $sharedStore->URLProfileStore;
                 $url = new URLProfile($name . "-URL", $store);
@@ -1321,6 +1327,7 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
                 $url->load_from_domxml($node);
                 $url->owner = null;
                 $store->addSecurityProfile($url);
+                $url->API_sync();;
 
                 $store = $sharedStore->FileBlockingProfileStore;
                 $fb = new FileBlockingProfile($name . "-FB", $store);
@@ -1331,6 +1338,7 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
                 $fb->load_from_domxml($node);
                 $fb->owner = null;
                 $store->addSecurityProfile($fb);
+                $fb->API_sync();;
 
                 $store = $sharedStore->WildfireProfileStore;
                 $wf = new WildfireProfile($name . "-WF", $store);
@@ -1341,6 +1349,7 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
                 $wf->load_from_domxml($node);
                 $wf->owner = null;
                 $store->addSecurityProfile($wf);
+                $wf->API_sync();
 
                 $secprofgrp = new SecurityProfileGroup($name, $sharedStore->securityProfileGroupStore, TRUE);
 
@@ -1353,6 +1362,7 @@ DeviceCallContext::$supportedActions['securityprofile-create-alert-only'] = arra
 
 
                 $sharedStore->securityProfileGroupStore->addSecurityProfileGroup($secprofgrp);
+                $secprofgrp->API_sync();
 
                 $context->first = false;
             }
@@ -1768,7 +1778,7 @@ DeviceCallContext::$supportedActions['ZoneProtectionProfile-create-BP'] = array(
                 }
 
                 else
-                    mwarning( "ZoneProtectionProfile 'Recommended_Zone_Protection' already available. BestPractise ZoneProtectionProfile 'Recommended_Zone_Protection' not created" );
+                    mwarning( "ZoneProtectionProfile 'Recommended_Zone_Protection' already available. BestPractise ZoneProtectionProfile 'Recommended_Zone_Protection' not created", null, FALSE );
 
 
                 $context->first = false;
